[package]
name = "asc-sync"
version = "0.1.0"
edition = "2024"
default-run = "asc-sync"

[dependencies]
anyhow = "1.0.102"
age = "=0.11.2"
axum = "=0.8.6"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
jsonwebtoken = { version = "=10.3.0", features = ["rust_crypto"] }
plist = "=1.8.0"
qrcode = "=0.14.1"
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "json", "query", "rustls"] }
rpassword = "=7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "=0.4.45"
tempfile = "3.27.0"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tokio = { version = "=1.49.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
